<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/movie_review_manager"
        android:textColor="#03A9F4"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/averageRatingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/average_rating_calculating"
        android:textColor="#0108DE"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_movie"
        android:textSize="16sp" />

    <Button
        android:id="@+id/viewReviewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view_reviews"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="246dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/movie_review_logo" />

</LinearLayout>